Fix headers and content spacing for rewards detail

--- a/apps/candyland/src/app/rewards/containers/reward-detail-page/reward-detail-page.component.scss
+++ b/apps/candyland/src/app/rewards/containers/reward-detail-page/reward-detail-page.component.scss
@@ -6,15 +6,6 @@
 }
 
 .reward-detail {
-  &-content {
-    width: 100%;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding-top: 2rem;
-  }
-
   &-filters {
     display: flex;
     justify-content: flex-end;
